Blender think its form the 70's #44433

Closed
opened 2015-04-17 18:03:54 +02:00 by Aaron Carlisle · 9 comments
Member

System Information
Windows 8.0
Intel hd 4600

Blender Version
Broken: 2.74.4

Short description of error

Blender think its form the 70's when starting from blender -d


C:\Users\Aaron\Downloads\blender-2.74-9b99786-win64\blender-2.74-9b99786-win64>blender -d
Switching to fully guarded memory allocator.
Blender 2.74 (sub 4)
Build: 2015-04-15 06:00:04 Windows:64bit Release
argv[0] = blender-app.exe
argv[1] = -d
read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\startup.blend
  Version 274 sub 4 date 1970-01-01 00:00 hash unknown

ordered
 OBCube
 OBLamp
 OBCamera
read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\userpref.blend
  Version 274 sub 0 date 1970-01-01 00:00 hash unknown
Read new prefs: C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\userpref.blend
found bundled python: C:\Users\Aaron\Downloads\blender-2.74-9b99786-win64\blender-2.74-9b99786-win64\2.74\python
Loaded Animation Nodes with 149 modules
Rock generator settings file found:
C:\Users\Aaron\Downloads\blender-2.74-9b99786-win64\blender-2.74-9b99786-win64\2.74\scripts\addons_contrib\add_mesh_rocks\add_mesh_rocks.xml
Rock Generator: Numpy found.
read file
  Version 262 sub 3 date 1970-01-01 00:00 hash
read file
  Version 268 sub 5 date 1970-01-01 00:00 hash

Exact steps for others to reproduce the error
start blender from blender -d

**System Information** Windows 8.0 Intel hd 4600 **Blender Version** Broken: 2.74.4 **Short description of error** Blender think its form the 70's when starting from `blender -d` ``` C:\Users\Aaron\Downloads\blender-2.74-9b99786-win64\blender-2.74-9b99786-win64>blender -d Switching to fully guarded memory allocator. Blender 2.74 (sub 4) Build: 2015-04-15 06:00:04 Windows:64bit Release argv[0] = blender-app.exe argv[1] = -d read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\startup.blend Version 274 sub 4 date 1970-01-01 00:00 hash unknown ordered OBCube OBLamp OBCamera read file C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\userpref.blend Version 274 sub 0 date 1970-01-01 00:00 hash unknown Read new prefs: C:\Users\Aaron\AppData\Roaming\Blender Foundation\Blender\2.74\config\userpref.blend found bundled python: C:\Users\Aaron\Downloads\blender-2.74-9b99786-win64\blender-2.74-9b99786-win64\2.74\python Loaded Animation Nodes with 149 modules Rock generator settings file found: C:\Users\Aaron\Downloads\blender-2.74-9b99786-win64\blender-2.74-9b99786-win64\2.74\scripts\addons_contrib\add_mesh_rocks\add_mesh_rocks.xml Rock Generator: Numpy found. read file Version 262 sub 3 date 1970-01-01 00:00 hash read file Version 268 sub 5 date 1970-01-01 00:00 hash ``` **Exact steps for others to reproduce the error** start blender from `blender -d`
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @mont29

Added subscriber: @mont29

It’s just the .blend file timestamps that are NULL (no hash of blender version either)…

Setting as low, for me it’s not even a bug but let’s see what others say here.

It’s just the .blend file timestamps that are NULL (no hash of blender version either)… Setting as low, for me it’s not even a bug but let’s see what others say here.

This issue was referenced by 4e40bdd02c

This issue was referenced by 4e40bdd02cd97ff61a62512e548686aad0d91a4d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4e40bdd02c.

Closed by commit 4e40bdd02c.

Added subscriber: @brecht

Added subscriber: @brecht

It prints "unknown" rather than unix epoch now.

It prints "unknown" rather than unix epoch now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44433
No description provided.