Fix T44433: print "unknown" rather than "1970-01-01" when .blend date is unknown.